Fix IE background color issue and alignment.

--- a/docs/app/components/theme-selector/theme-selector.component.less
+++ b/docs/app/components/theme-selector/theme-selector.component.less
@@ -3,10 +3,11 @@
 .theme-selector-button {
     display: flex;
     align-items: center;
+    height: 50px;
     font-size: 0.9375rem;
     border: none;
     padding: 15px;
-    background-color: inherit;
+    background-color: transparent;
 
     ux-icon[name="chevron-down"] {
         margin-left: 8px;
@@ -15,5 +16,4 @@
 
 ::ng-deep .uxd-theme-selector-dropdown {
     min-width: 250px;
-    margin-top: -1px;
 }
